updated test